# knowledge-base

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  PATCH-NOTES.md  README.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  context-engine-vendoring.yml  publish-dashboard.yml  publish.yml
.husky/: pre-commit
apps/cli/: README.md  package.json  tsup.config.ts  vitest.config.ts
apps/dashboard/: Dockerfile  index.html  package.json  tsup.sidecar.ts  vite.config.ts
apps/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/capabilities/: default.json  widgets.json
apps/dashboard/src-tauri/icons/: icon.icns
apps/dashboard/src-tauri/splash/: index.html
apps/dashboard/src-tauri/src/: main.rs  sidecar.rs  tray.rs  widget_config.rs  widgets.rs
apps/dashboard/src-tauri/src/copilot_bridge/: commands.rs  config.rs  error.rs  events.rs  mod.rs  models.rs  process_group.rs  registry.rs  spawn.rs
apps/dashboard/src-tauri/src/intake/: audit.rs  commands.rs  first_run.rs  lock.rs  mod.rs  runner.rs
apps/dashboard/src-tauri/src/sb_clone/: commands.rs  events.rs  manager.rs  mod.rs
apps/dashboard/src-tauri/src/sb_freshness/: commands.rs  events.rs  mod.rs  service.rs
apps/dashboard/src-tauri/templates/: copilot-models.json
apps/mcp-server/: package.json  tsup.config.ts
docker/: docker-compose.yml
docker/init/: 001-schema.sql
docker/ollama/: pull-models.sh
docs/: context-engine.md
documentation/: README.md  api-reference.md  architecture.md  ci-cd.md  config-injection.md  database.md  frontend.md  mcp-server.md  setup-uninstall.md  tauri-sidecar.md
openspec/: AGENTS.md  project.md
openspec/design/: wireframe.html
openspec/proposals/: 001-initial-architecture.md
scripts/: bump-version.sh  install-legacy.sh  install.sh  security-check.sh  test-agents.sh  vendor-context-engine.mjs
templates/context-engine/: AGENTS.md  MANIFEST.json  (+3 more)
(+223 files in other folders)
