[package]
name = "ai-knowledge-dashboard"
version = "0.9.3"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "net", "io-util"] }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
