[package]
name = "cognistore-dashboard"
version = "1.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "net", "io-util"] }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
